--- a/content/auth.html
+++ b/content/auth.html
@@ -9,14 +9,16 @@
   <script>
     const socket = io({ auth: { token: localStorage.getItem("token") } });
 
+function clearAllCookies() {
+  const cookies = document.cookie.split(";");
+  for (let cookie of cookies) {
+    const eqPos = cookie.indexOf("=");
+    const name = eqPos > -1 ? cookie.substr(0, eqPos) : cookie;
+    document.cookie = name.trim() + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT;path=/";
+  }
+}
 
     document.addEventListener("DOMContentLoaded", () => {
-      // Проверка на наличие пользователя
-      socket.emit('check name');
-      console.log("Check name");
-      socket.on("has name",()=>{
-        window.location.href = "/chat"
-      })
       document.getElementById("registerForm").addEventListener("submit", async (e) => {
         e.preventDefault();
 
@@ -47,8 +49,9 @@
         }
       });
 
-      socket.on("registerSuccess", (name) => {
-        window.location.href = "/chat"
+      socket.on("registerSuccess", (username) => {
+        document.cookie = username
+        window.location.href = "/chat";
       });
     });
 
