--- a/content/forgot-password.html
+++ b/content/forgot-password.html
@@ -108,28 +108,39 @@
     const socket = io({ auth: { token: localStorage.getItem("token") } });
 
     function validateEmail(email) {
-      const re = /^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$/;
+      const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
       return re.test(email);
     }
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      if (parts.length === 2) {
+        return parts.pop().split(";").shift();
+      }
+      return null;
+    }
+    // Сначала объявляем обработчики вне submit
+    socket.on("correct email", ({ email, username }) => {
+      document.cookie = `username=${username}; path=/; max-age=` + 60*60*24*7;
+      document.cookie = `email=${email}; path=/; max-age=` + 60*60*24*7;
+      alert(username + " / " + email);
+      window.location.href = "/new-password";
+    });
 
+    socket.on("incorrect email", () => {
+      alert("Email not found");
+    });
+
+    // Затем форма
     document.getElementById("enter-email").addEventListener("submit", (event) => {
       event.preventDefault();
       const email = document.getElementById("email").value.trim();
 
-      if (!validateEmail(email)) {
-        return alert("Invalid email format");
-      }
+      if (!validateEmail(email)) return alert("Некоректний email");
 
       socket.emit("forgot-password", email);
-
-      socket.on("correct email", () => {
-        window.location.href = "/new-password";
-      });
-
-      socket.on("incorrect email", () => {
-        alert("Email not found");
-      });
     });
+
   </script>
 </body>
 </html>
