--- a/content/new-password.html
+++ b/content/new-password.html
@@ -113,26 +113,39 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io({ auth: { token: localStorage.getItem("token") } });
+function getCookie(name) {
+    const value = `; ${document.cookie}`;
+    const parts = value.split(`; ${name}=`);
+    if (parts.length === 2) {
+      return parts.pop().split(";").shift();
+    }
+    return null;
+  }
+  
+      // Обработчики событий вынесены вне submit
+  socket.on("password-updated", () => {
+    alert("✅ Password updated successfully");
+    window.location.href = "/chat";
+  });
 
-    document.getElementById("new-password-form").addEventListener("submit", (event) => {
-      event.preventDefault();
-      const newPassword = document.getElementById("new-password").value.trim();
-      
-      if (newPassword.length < 6) {
-        return alert("Password must be at least 6 characters long");
-      }
+  socket.on("password-update-error", (msg) => {
+    alert("❌ " + msg);
+  });
 
-      socket.emit("new-password", newPassword);
+  // Форма
+  document.getElementById("new-password-form").addEventListener("submit", (event) => {
+    event.preventDefault();
+    const newPassword = document.getElementById("new-password").value.trim();
+    const email = getCookie("email");
 
-      socket.on("password-updated", () => {
-        alert("✅ Password updated successfully");
-        window.location.href = "/chat";
-      });
+    if (newPassword.length < 6) {
+      return alert("Password must be at least 6 characters long");
+    }
 
-      socket.on("password-update-error", (msg) => {
-        alert("❌ " + msg);
-      });
-    });
+    // Передаём объект, а не функцию
+    socket.emit("new-password", { newPassword, email });
+  });
+
   </script>
 </body>
 </html>
