--- a/content/auth.html
+++ b/content/auth.html
@@ -17,11 +17,17 @@ function clearAllCookies() {
     document.cookie = name.trim() + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT;path=/";
   }
 }
-
+function getCookie(name) {
+    const value = `; ${document.cookie}`;
+    const parts = value.split(`; ${name}=`);
+    if (parts.length === 2) return parts.pop().split(";").shift();
+}
     document.addEventListener("DOMContentLoaded", () => {
+      // if (getCookie("username")){
+      //   window.location.href = "/chat";
+      // }
       document.getElementById("registerForm").addEventListener("submit", async (e) => {
         e.preventDefault();
-
         const name = document.getElementById("user-name").value.trim();
         const email = document.getElementById("user-email").value.trim();
         const password = document.getElementById("user-password").value.trim();
@@ -41,8 +47,9 @@ function clearAllCookies() {
             alert("Користувач з таким ім'ям вже існує");
             return;
           }
-
+          
           socket.emit("register", { name, password, language, email });
+          
         } catch (err) {
           console.error("❌ Error checking user:", err);
           alert("Server error");
@@ -50,7 +57,7 @@ function clearAllCookies() {
       });
 
       socket.on("registerSuccess", (sessionId) => {
-        document.cookie = sessionId
+        document.cookie = `username=${sessionId}; path=/; max-age=` + 60*60*24*7;
         alert(document.cookie);
         window.location.href = "/chat";
       });
