--- a/content/chat.html
+++ b/content/chat.html
@@ -150,49 +150,37 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
 const socket = io({ auth: { token: localStorage.getItem("token") } });
+
+function getCookie(name) {
+    const value = `; ${document.cookie}`;
+    const parts = value.split(`; ${name}=`);
+    if (parts.length === 2) return parts.pop().split(";").shift();
+}
+
 document.addEventListener("DOMContentLoaded", () => {
-    fetch('/api/users')
-    .then(response => response.json())
-    .then(data => {
-        const currentUser = data[data.length - 1];  
+    const mainName = getCookie("chat"); // твое имя
+    const chatNow = getCookie("chat");      // с кем общаемся
 
-        // Берем имя друга напрямую (строка)
-        const roomNow = typeof currentUser.roomNow === "string"
-            ? currentUser.roomNow
-            : "";
-        const mainName = typeof currentUser.mainName === "string"
-            ? currentUser.mainName
-            : "";
-        const chatNow = typeof currentUser.chatNow === "string"
-            ? currentUser.chatNow
-            : "";
-        console.log(roomNow);
-        socket.emit("join chat", {mainName:roomNow, chatNow:roomNow });
-        document.getElementById("messageForm").addEventListener("submit", (e) => {
-            e.preventDefault();
-            console.log(mainName, roomNow, chatNow);
-            const msg = document.getElementById("messageText").value.trim();
-            if (!msg || !chatNow || mainName === "Unknown") return;
-
-            socket.emit("set chat", { chatNow:roomNow, mainName:roomNow, msg });
-            document.getElementById("messageText").value = "";
-        });
-    })
-    .catch(error => console.error("Ошибка загрузки chatNow:", error));
-});
-
-
-socket.on("no friend", () => {
-    alert("No friend selected for chat.");
-    window.location.href = "/";
-});
-let chatNow = null;
-let mainName = null;
-socket.on("chat set", (data) => {
-    if (data.chatNow) {
-        mainName = data.username;
-        chatNow = data.chatNow;
+    if (!mainName || !chatNow) {
+        alert("Нет данных для входа в чат");
+        window.location.href = "/";
+        return;
     }
+
+    console.log(`➡ Входим в чат: ${chatNow} ↔ ${chatNow}`);
+    socket.emit("join chat", { mainName, chatNow });
+
+    document.getElementById("messageForm").addEventListener("submit", (e) => {
+        e.preventDefault();
+        const msg = document.getElementById("messageText").value.trim();
+        if (!msg) return;
+
+        socket.emit("set chat", { chatNow, mainName, msg });
+        document.getElementById("messageText").value = "";
+    });
+});
+
+socket.on("chat set", (data) => {
     const chatContent = document.getElementById("chat-content");
     chatContent.innerHTML = "";
 
@@ -201,50 +189,9 @@ socket.on("chat set", (data) => {
             const name = msg.username || msg.sender || "Unknown";
             const text = msg.text || "";
 
-            if (name === "Unknown") return;
-
             const div = document.createElement("div");
-            div.innerHTML = `<p><strong>${name}</strong>: <span id="msgText-${index}">${escapeHtml(text)}</span></p>`;
-            div.style = "font-size:1.5em; color:#2F5C4B;";
-
-            const btnContainer = document.createElement("div");
-            btnContainer.style.display = "none";
-            btnContainer.style.marginTop = "5px";
-
-            const deleteBtn = document.createElement("button");
-            deleteBtn.textContent = "Delete";
-            deleteBtn.addEventListener("click", () => {
-                socket.emit("delete message", { id: msg.id, chatNow, mainName });
-                btnContainer.style.display = "none";
-            });
-
-
-            const complainBtn = document.createElement("button");
-            complainBtn.textContent = "Complain";
-            btnContainer.appendChild(deleteBtn);
-            btnContainer.appendChild(complainBtn);
-            div.appendChild(btnContainer);
-
-            div.addEventListener("contextmenu", (e) => {
-                e.preventDefault();
-                btnContainer.style.display = "block";
-            });
-
-            let touchTimer = null;
-            div.addEventListener("touchstart", (e) => {
-                touchTimer = setTimeout(() => {
-                    btnContainer.style.display = "block";
-                }, 500);
-            });
-            div.addEventListener("touchend", (e) => {
-                clearTimeout(touchTimer);
-            });
-
-            document.addEventListener("click", (e) => {
-                if (!div.contains(e.target)) {
-                    btnContainer.style.display = "none";
-                }
-            });
+            div.innerHTML = `<p><strong>${name}</strong>: <span>${escapeHtml(text)}</span></p>`;
+            div.style = "font-size:1.2em; color:#2F5C4B; margin-bottom: 8px;";
 
             chatContent.appendChild(div);
         });
@@ -253,16 +200,14 @@ socket.on("chat set", (data) => {
     chatContent.scrollTop = chatContent.scrollHeight;
 });
 
-// функция для защиты от XSS
 function escapeHtml(str) {
-  return str
-    .replace(/&/g, "&amp;")
-    .replace(/</g, "&lt;")
-    .replace(/>/g, "&gt;")
-    .replace(/"/g, "&quot;")
-    .replace(/'/g, "&#039;");
+    return str
+        .replace(/&/g, "&amp;")
+        .replace(/</g, "&lt;")
+        .replace(/>/g, "&gt;")
+        .replace(/"/g, "&quot;")
+        .replace(/'/g, "&#039;");
 }
-
 
 
 socket.on("chat error",(data)=>{
