--- a/content/create-room.html
+++ b/content/create-room.html
@@ -170,19 +170,15 @@
     const socket = io({ auth: { token: localStorage.getItem("token") } });
     // Получаем имя пользователя из users.json через fetch
     let userName = "";
-    fetch("/users.json")
-      .then(response => response.json())
-      .then(data => {
-      // Предполагаем, что users.json содержит объект с текущим пользователем
-      // Например: { "currentUser": { "name": "Stas" } }
-      userName = data.currentUser?.name || "";
-      })
-      .catch(() => {
-      userName = "";
-      });
-
-    // Запрашиваем список комнат при загрузке
-    
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      if (parts.length === 2) {
+        return parts.pop().split(";").shift();
+      }
+      return null;
+    }
+    const username = getCookie("username");
     // Создание новой комнаты
     document.getElementById("roomForm").addEventListener("submit", (e) => {
       e.preventDefault();
@@ -190,7 +186,7 @@
       const roomDescription = document.getElementById("roomDescription").value.trim();
       const language = document.getElementById("language").value.trim();
       const categorie = document.getElementById("categorie").value.trim();
-      socket.emit("createRoom", { roomName, roomDescription,language,categorie });
+      socket.emit("createRoom", { roomName, roomDescription,language,categorie,username });
     });
 
     // Уведомления
