--- a/content/home.html
+++ b/content/home.html
@@ -110,10 +110,19 @@
   </nav>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  const socket = io({ auth: { token: localStorage.getItem("token") } });
+  const socket = io("http://localhost:5050", {
+    auth: { token: localStorage.getItem("token") },
+    withCredentials: true
+  });
+
   const recomendations = document.getElementById("recomendations");
-  
+  function getCookie(name) {
+    const value = `; ${document.cookie}`;
+    const parts = value.split(`; ${name}=`);
+    if (parts.length === 2) return parts.pop().split(";").shift();
+  }
   document.addEventListener("DOMContentLoaded", () => {
+    
     socket.emit("getRooms");
   });
   
@@ -152,15 +161,17 @@
 
     // Join Room button handler
     div.querySelector(".join-room").onclick = () => {
-      socket.emit("enter room", room.room_name);
+      document.cookie = `chat=${room.room_name}; path=/; max-age=` + 60*60*24*7;
       window.location.href = `/main?room=${encodeURIComponent(room.room_name)}`;
     };
 
     // Save Room button handler
     div.querySelector(".save-room").onclick = () => {
       console.log(room.user_name, room.room_name, room.description, room.language, room.categorie);
+      const username = getCookie("username");
       socket.emit("add to main room", { 
         user: room.user_name, 
+        username: username,
         room_name: room.room_name, 
         description: room.description, 
         language: room.language 
