--- a/content/user-profile.html
+++ b/content/user-profile.html
@@ -19,7 +19,12 @@
     return null;
   }
   document.addEventListener("DOMContentLoaded", () => {
-  // socket.emit("check admin");
+    const username = getCookie("username")
+    socket.emit("show rooms",(username));
+    socket.emit("show saved rooms",username);
+
+    socket.emit("check admin",username);
+    document.getElementById("user-name").textContent = getCookie("username");
   socket.on("is admin",()=>{
     document.getElementById("support").style.display="inline-block";
     document.getElementById("support").onclick=null;
@@ -30,15 +35,10 @@
     console.log("Pay");
     const language = document.getElementById("language").value.trim();
     console.log(language);
-    socket.emit("change language",(language));
+    socket.emit("change language",(language,username));
   });
+ 
 
-  socket.emit("get user name");
-  socket.emit("show rooms");
-  socket.emit("show saved rooms");
-  socket.on("set name", (name) => {
-    document.getElementById("user-name").textContent = document.cookie;
-  });
   socket.on("name changed",(name)=>{
     document.getElementById("user-name").textContent = name;
     alert("Name changed to "+name);
@@ -57,6 +57,7 @@
   })
   function toChat(friend){
     socket.emit("get hash",friend);
+    document.cookie.chatNow = friend
     socket.on("set hash",(hash)=>{
       console.log(hash);    
       window.location.href = `/your?room=${encodeURIComponent(hash)}`;          
@@ -154,7 +155,7 @@ socket.on("saved rooms", (rooms) => {
       <h3 style="background-color:#2596be;"   class="font-semibold">${room.room}</h3>
       <p style="background-color:#2596be; opacity:0.9; color:gold;">Description: ${room.description}</p>
       <p style="background-color:#2596be; opacity:0.9; color:gold;">Language: ${room.language}</p>
-      <p align="right" style="background-color:#2596be; opacity:0.9; color:#FF2900; font-size:1.2em;">Author: ${room.username}</p>
+      <p align="right" style="background-color:#2596be; opacity:0.9; color:#FF2900; font-size:1.2em;">Author: ${room.name}</p>
       <button id="join-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Join</button>
       <button id="del-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Delete</button>
     `;
@@ -176,15 +177,22 @@ function toRoomChat(roomName){
   window.location.href = `/room-chat?room=${encodeURIComponent(roomName)}`;
 }
 function deleteRoom(roomName){
-  socket.emit("del-room",roomName);
+  const username = getCookie("username");
+  socket.emit("del-room",(roomName,username));
 }
 function deleteRoom2(roomName){
-  socket.emit("del room",roomName);
+  const username = getCookie("username");
+  socket.emit("del room",(roomName,username));
 }
 function editRoom(roomName){
   socket.emit("edit room",roomName);
 }
-
+function changeName(){
+  const name = document.getElementById("name-changed").value.trim();
+  console.log(name);
+  const username = getCookie("username");
+  socket.emit("change name",(name,username));
+}
 function toChat(){
   alert("Connecting to support service...");
   socket.emit("add friend", { name: "Support service" });
@@ -232,6 +240,10 @@ function toChat(){
 <body class="bg-gray-100 text-gray-900 min-h-screen">
   <div class="container mx-auto p-4 sm:p-6 lg:p-8 max-w-5xl">
     <!-- Profile Header -->
+    <a id="enter-btn" href="/chat" 
+      class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg shadow-md transition-all duration-300">
+      Home
+    </a>
     <div class="bg-white rounded-2xl shadow-xl p-6 mb-6 text-center sm:text-left">
       <a id="support" onclick="toChat()" class="inline-block px-5 py-2 rounded-lg bg-green-500 text-white font-semibold shadow hover:bg-indigo-600 transition mb-4 sm:mb-0 text-center">Support service</a>
 
@@ -365,15 +377,15 @@ function toChat(){
           <button id="change-language" type="submit" class="inline-block px-5 py-2 rounded-lg bg-indigo-500 text-white font-semibold shadow hover:bg-indigo-600 transition mb-4 sm:mb-0 text-center">Save</button>
           
         </div>
-        <div>
+        <!-- <div>
           <form>
-            <input type="text" placeholder="New name" class="w-full p-2 border rounded mb-4">
-            <input type="submit" value="Change name" onclick="socket.emit('change name',document.querySelector('input[type=text]').value);document.querySelector('input[type=text]').value='';return false;" class="inline-block px-5 py-2 rounded-lg bg-indigo-500 text-white font-semibold shadow hover:bg-indigo-600 transition mb-4 sm:mb-0 text-center">
+            <input type="text" id="name-changed" placeholder="New name" class="w-full p-2 border rounded mb-4">
+            <input type="submit" value="Change name" onclick="changeName()">
           </form>
-        </div>
+        </div> -->
         
         <div>
-          <h3 onclick="socket.emit('del account')" class="text-lg font-medium">Exit</h3>
+          <h3 onclick="socket.emit('del account',getCookie('username'))" class="text-lg font-medium">Exit</h3>
           <p></p>
         </div>
       </div>
