--- a/content/users-chat.html
+++ b/content/users-chat.html
@@ -104,48 +104,44 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io({ auth: { token: localStorage.getItem("token") } });
+function getCookie(name) {
+    const value = `; ${document.cookie}`;
+    const parts = value.split(`; ${name}=`);
+    if (parts.length === 2) return parts.pop().split(";").shift();
+}
 
-        let chatNow = null;
+
+
         let mainName = null;
+        let chatNow = null;
 
-        // Загрузка текущего пользователя
         document.addEventListener("DOMContentLoaded", () => {
-            fetch('/api/users')
-            .then(response => response.json())
-            .then(data => {
-                if (!Array.isArray(data) || data.length === 0) return;
+            const mainName = getCookie("username")
+            const chatNow = getCookie("chat")
+            console.log(mainName, chatNow)
+            socket.emit("get messages",(mainName,chatNow));
+            socket.emit("join chat", { mainName, chatNow });
+            document.getElementById("messageForm").addEventListener("submit", (e) => {
+                e.preventDefault();
+                const msg = document.getElementById("messageText").value.trim();
+                if (!msg || !chatNow || !mainName) return;
 
-                const currentUser = data[data.length - 1];  
-                chatNow = typeof currentUser.chatNow === "string" ? currentUser.chatNow : "";
-                mainName = typeof currentUser.username === "string" ? currentUser.username : "Unknown";
-
-                if (!chatNow) return;
-                
-                socket.emit("get messages",chatNow);
-                socket.emit("join chat", { mainName, chatNow });
-
-                document.getElementById("messageForm").addEventListener("submit", (e) => {
-                    e.preventDefault();
-                    const msg = document.getElementById("messageText").value.trim();
-                    if (!msg || !chatNow || mainName === "Unknown") return;
-
-                    socket.emit("set chat", { chatNow, mainName, msg });
-                    document.getElementById("messageText").value = "";
-                });
-            })
-            .catch(error => console.error("Ошибка загрузки chatNow:", error));
+                socket.emit("set chat", { chatNow, mainName, msg });
+                document.getElementById("messageText").value = "";
+            });
         });
+
         
 
-        socket.on("no friend", () => {
-            alert("No friend selected for chat.");
-            window.location.href = "/";
-        });
+        // socket.on("no friend", () => {
+        //     alert("No friend selected for chat.");
+        //     window.location.href = "/";
+        // });
 
         // Обновление чата
         socket.on("chat set", (data) => {
             const chatContent = document.getElementById("chat-content");
-
+            chatContent.innerHTML = ""
             if (!data.messages || !Array.isArray(data.messages)) return;
 
             data.messages.forEach((msg, index) => {
