--- a/content/user-profile.html
+++ b/content/user-profile.html
@@ -174,6 +174,7 @@ socket.on("room delete error",(err)=>{
 })
 
 function toRoomChat(roomName){
+  document.cookie = `chat=${roomName}; path=/; max-age=` + 60*60*24*7;
   window.location.href = `/room-chat?room=${encodeURIComponent(roomName)}`;
 }
 function deleteRoom(roomName){
