--- a/content/auth.html
+++ b/content/auth.html
@@ -6,6 +6,8 @@
   <title>Registration</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2179616395540389"
+     crossorigin="anonymous"></script>
   <script>
     const socket = io({ auth: { token: localStorage.getItem("token") } });
 
