--- a/content/tetris.html
+++ b/content/tetris.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2179616395540389"
+     crossorigin="anonymous"></script>
 <title>Tetris — Desktop + Mobile (Single File)</title>
 <style>
   :root{--bg:#071027;--panel:#0f1724;--muted:#94a3b8;--accent:#7dd3fc;--glass:rgba(255,255,255,.04)}
